# ChatHLS-ACL-26

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_chathls.bat  run_chathls.sh
benchmark/benchmark_optimization/atax/: PPA_result.txt  atax.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/bicg/: PPA_result.txt  bicg.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/covariance/: PPA_result.txt  covariance.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/gemm/: PPA_result.txt  gemm.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/gemm_blocked/: PPA_result.txt  gemm_blocked.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/gemm_ncubed/: PPA_result.txt  gemm_ncubed.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/gesummv/: PPA_result.txt  gesummv.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/kernel_2mm/: PPA_result.txt  kernel_2mm.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/kernel_3mm/: PPA_result.txt  kernel_3mm.cpp  kernel_info.txt  run_hls.tcl
benchmark/benchmark_optimization/kernel_symm/: PPA_result.txt  kernel_info.txt  kernel_symm.cpp  run_hls.tcl
benchmark/benchmark_optimization/kernel_syr2k/: PPA_result.txt  kernel_info.txt  kernel_syr2k.cpp  run_hls.tcl
docs/: requirements.md  workflow.md
examples/specs/: wire_assign.md
src/chathls/: __init__.py  adapter.py  cli.py  config.py  debug.py  files.py  models.py  optimize.py  prompts.py  runner.py  transform.py  workflow.py
(+1115 files in other folders)
