[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chathls"
version = "0.1.0"
description = "ChatHLS open-source workflow for transform, validate, debug, and optimize HLS kernels."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ChatHLS Authors" }]
dependencies = ["psutil>=5.9", "transformers>=4.46", "torch>=2.1"]

[project.scripts]
chathls = "chathls.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
